--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Web Suite</title>
+  <title>Chamith's Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
